<resources>
    <string name="app_name">MAPD-711 Assignment 1</string>
    <string name="text_HeaderInputForm">Student Input Form:</string>
    <string name="text_HeaderOutputForm">Student Profile:</string>
    <string name="text_Name">Your Name: </string>
    <string name="text_Address">Your Address: </string>
    <string name="text_Profession">Your Profession: </string>
    <string name="text_DreamJob">Your Dream job: </string>
    <string name="text_Food">Favorite Food: </string>
    <string name="textHint_Name">Type Your Name</string>
    <string name="textHint_Address">Type Your Address</string>
    <string name="textHint_Profession">Past or current job</string>
    <string name="textHint_DreamJob">Type here</string>
    <string name="textHint_Food">Type here</string>
    <string name="button_Submit">Submit</string>
</resources>